[gd_scene load_steps=5 format=2]

[ext_resource path="res://nodes/Platers/PlaterBase/PlaterBase.gd" type="Script" id=1]
[ext_resource path="res://nodes/GUI/PlaterPlacementPopup/PlaterPlacementPopup.tscn" type="PackedScene" id=2]

[sub_resource type="Gradient" id=1]

colors = PoolColorArray( 1, 0, 1, 1, 1, 0, 0.984375, 1 )

[sub_resource type="GradientTexture" id=2]

gradient = SubResource( 1 )

[node name="PlaterBase" type="Spatial"]
script = ExtResource( 1 )
GUI_Illustration = SubResource( 2 )

[node name="PlaterPlacementDetection" type="Area" parent="."]
input_ray_pickable = true

[node name="Base" type="Position3D" parent="."]

[node name="Origin" type="Position3D" parent="."]

[node name="Up" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="PlaterPlacementPopup" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="input_event" from="PlaterPlacementDetection" to="." method="_on_PlaterPlacementDetection_input_event"]
